--- a/app.cfg
+++ b/app.cfg
@@ -1,6 +1,6 @@
 [directorypaths]
 sourcefilesdir = ../supfiles-coex/
 resdir = ../results-coex/
-pathtobedtools = /exports/applications/apps/community/roslin/bedtools/2.26.0/bin
+pathtobedtools = /path/to/bedtools
 f5resource = http://fantom.gsc.riken.jp/zenbu/gLyphs/#config=ne92nJ20PhPv5ziW90qnND;loc=hg19::
 
