Changes mainly to 0-prepare-coex.py to improve speed and fix bugs discovered since publication of the main paper.

--- a/app.cfg
+++ b/app.cfg
@@ -1,6 +1,7 @@
 [directorypaths]
 sourcefilesdir = ../supfiles-coex/
 resdir = ../results-coex/
-pathtobedtools = /path/to/bedtools
+pathtobedtools = '' 
+pathtopython = python
 f5resource = http://fantom.gsc.riken.jp/zenbu/gLyphs/#config=ne92nJ20PhPv5ziW90qnND;loc=hg19::
 
